deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pacman
  name: pacman
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: ghcr.io/pedroferreiractw/pacman:2.0
        resources:
          requests:
            cpu: 1m
