service.yml
apiVersion: v1
kind: Service
metadata:
  name: pacman
  labels:
    run: pacman
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: pacman
